toc switch visibility fix

--- a/assets/sass/components/_switch.scss
+++ b/assets/sass/components/_switch.scss
@@ -1,15 +1,10 @@
 .switch {
   position: relative;
-  display: inline-block;
+  // display: inline-block;
   width: 28px;
   height: 14px;
   margin-top: 0.7rem;
   margin-left: 1rem;
-  
-  @include animation('slide-in-down-little .2s .3s 1 ease-in backwards');
-  @media only screen and (max-width: 1300px) {
-    display: none;
-  }
 }
 
 .switch input { 
