--- a/assets/sass/components/_toc.scss
+++ b/assets/sass/components/_toc.scss
@@ -32,6 +32,11 @@
     top: 4.2rem;
     left: 1rem;
     position: absolute;
+
+    @include animation('slide-in-down-little .2s .3s 1 ease-in backwards');
+    @media only screen and (max-width: 1300px) {
+      display: none;
+    }
   }
 
   &__title {
